--- a/src/main/resources/static/css/user/edit.css
+++ b/src/main/resources/static/css/user/edit.css
@@ -18,4 +18,4 @@
 .categoryItem > div > .border-r{border-right: 1px solid #c7c7c7;}
 
 #modProfileCont .disabled > input{color: #6d6d6d; border: 1px solid #cfcfcf;}
-#chkNickAjax{ padding: 0; text-align: center;}
+#chkUserNickAjax{ padding: 0; text-align: center;}
