--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -20,11 +20,11 @@
             <form  id="joinFrm" th:action="@{join}" method="post" th:object="${userEntity}" onsubmit="return frmChk()">
                 <!--            id와 name 자동들어감-->
                 <div>
-                    <div><input type="email" th:field="*{email}" placeholder="이메일" autofocus required></div>
+                    <div><input type="email" th:field="*{email}" placeholder="이메일" maxlength="50" autofocus required></div>
                     <div><input type="password" th:field="*{pw}" placeholder="비밀번호" required> </div>
                     <div><input type="password" name="pwChk" placeholder="비밀번호 확인"> </div>
-                    <div><input type="text" th:field="*{nm}" placeholder="이름" required> </div>
-                    <div><input type="text" th:field="*{nick}" placeholder="닉네임" required> </div>
+                    <div><input type="text" th:field="*{nm}" placeholder="이름" maxlength="10" required> </div>
+                    <div><input type="text" th:field="*{nick}" placeholder="닉네임" maxlength="10" required> </div>
                 </div>
 
                 <div>
