--- a/src/main/resources/templates/root/userFeed.html
+++ b/src/main/resources/templates/root/userFeed.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="basicLayout">
+<head><title th:text="${nickUser.nick}"></title></head>
 <th:block layout:fragment="css">
 </th:block>
 <th:block layout:fragment="js">
