--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,7 +1,7 @@
 *{box-sizing: border-box;}
 html,body{margin: 0; padding: 0; height: 100%;}
 #container{display: flex; flex-direction: column; min-height: 100%;width: 100%;}
-section{flex:1;  background-color: #f5f5f5;}
+section{flex:1; display: flex; flex-direction: column; background-color: #f5f5f5;}
 a{text-decoration: none; color: black; }
 ul,ol,li{list-style: none}
 
@@ -49,30 +49,30 @@ nav{ display: flex; height: 100%; width: 100%;}
 }
 
 /*#wrap{ padding-top: 100px; min-width: 1190px;}*/
-#wrap{ padding-top: 95px; width: 100%;}
+#wrap{ display: flex; flex-direction: column; padding-top: 95px; width: 100%; flex-grow: 1;}
 
-.Container {width: 1130px;
-    padding: 20px 30px; margin: 0 auto; min-height:100%;}
 
 footer{ background-color:#303740; height: 80px; color: #fafafa; }
-
 .btn{ background-color: #cfcfcf; }
+
 input[type="submit"]:disabled{
     pointer-events: none;
     color: #fafafa;
 }
 .btn:hover{ opacity: 70%; cursor: pointer;}
 .btn:active{ opacity: 90%; }
-
 .pointer{cursor: pointer;}
 
-.contW480{ width: 480px; margin: 0 auto 50px auto; padding: 10px 30px; }
-.contW600{ width: 600px; margin: 0 auto 50px auto; padding: 10px 55px 20px 60px; }
+.Container {width: 1130px; margin: 0 auto 50px auto; padding: 20px 30px; min-height:100%;}
+.contW935{ width: 100%; max-width: 935px; margin: 0 auto; flex-grow: 1; background-color: #fafafa;}
+.contW480{ width: 100%; max-width: 480px; margin: 0 auto 50px; padding: 10px 30px; }
+.contW600{ width: 100%; max-width: 600px; margin: 0 auto 50px; padding: 10px 55px 20px 60px; }
 
 .profile { object-fit: cover; border-radius: 50%; border: 1px solid #8e8e8e;}
 
 .wh30 { width: 30px; height: 30px; }
 .wh50 { width: 50px; height: 50px; }
+.wh150 { width: 150px; height: 150px; }
 .wh200 { width: 200px; height: 200px; }
 
 .loadingParent{
