--- a/src/main/resources/templates/root/userFeed.html
+++ b/src/main/resources/templates/root/userFeed.html
@@ -11,7 +11,7 @@
     <script defer th:src="@{/js/root/userFeed.js}"></script>
 </th:block>
 <th:block layout:fragment="content">
-    <div id="feedUserConst" th:data="iuser=${feedUser.iuser}"></div>
+    <div id="feedUserConst" th:data-iuser="${feedUser.iuser}"></div>
     <div class="contW935" th:with="auth=${#authentication.getPrincipal().getUser()}">
         <div class="feed_header">
             <div class="feed_header_left">
