--- a/src/main/resources/templates/root/userFeed.html
+++ b/src/main/resources/templates/root/userFeed.html
@@ -22,8 +22,8 @@
                 <div class="cont_nick">
                     <h2 th:text="${feedUser.nick}"></h2>
                     <th:block th:if="${feedUser.iuser != auth.iuser}">
-                        <button th:if="${feedUser.subscriber == 0}" id="subscription" class="btn">구독하기</button>
-                        <button th:if="${feedUser.subscriber == 1}" id="cancel_subscription" class="btn">구독중</button>
+                        <button th:if="${feedUser.subscriber == 0}" id="subscription" class="btn subscriptionBtn">구독하기</button>
+                        <button th:if="${feedUser.subscriber == 1}" id="subscription" class="btn">구독중</button>
                     </th:block>
                 </div>
                 <div class="cont_inform">
@@ -38,7 +38,7 @@
         <div id="cancel_subscription-modal" class="modal hide">
             <div>
                 <div class="modal_close_parent"><div>구독을 취소하시겠습니까?</div><i class="modal_close fas fa-times"></i></div>
-                <input type="button" id="btnDel" class="btn pointer" value="네">
+                <input type="button" id="btnCancel" class="btn pointer" value="네">
             </div>
         </div>
     </div>
