--- a/src/main/resources/static/css/root/userFeed.css
+++ b/src/main/resources/static/css/root/userFeed.css
@@ -1,3 +1,5 @@
+.contW935{ display: flex; flex-direction: column;}
+
 .feed_header{ display: flex; width: 100%; height: 220px; border-bottom: 1px solid #cfcfcf;}
 .feed_header .feed_header_left{ width: 30%; min-width: 180px;}
 .feed_header .feed_header_left img{ display: block; margin: auto auto;}
