--- a/src/main/resources/static/css/user/subscriptions.css
+++ b/src/main/resources/static/css/user/subscriptions.css
@@ -1,9 +1,25 @@
-.contW935{ display: flex; gap: 10px;}
+.contW935{ display: flex; gap: 7%;}
 
-.contW935 #subscriptionCont_left{ width: 20%; min-width: 180px; display: flex; flex-direction: column; align-items: center; gap: 10px; padding-top: 20px;}
+.contW935 #subscriptionCont_left{ width: 18%; min-width: 170px; display: flex; flex-direction: column; align-items: center; gap: 10px; padding-top: 20px;}
 
-#subscriptionCont_right{  flex-grow: 1; padding: 20px 15px;}
-#subscriptionCont_right_header{ font-size: 18px; font-weight: 900; text-align: center; height: 40px; border-bottom: 1px solid #cfcfcf; color: #616161; }
-#subscriptionCont_right #subscriptionListCont{ max-height: 400px;  overflow-y: auto; margin: 5px 0; padding: 0 5px;}
-
+#subscriptionCont_right{  flex-grow: 1; padding: 20px 15px; max-width: 670px; display: flex; flex-direction: column;}
+#subscriptionCont_right_header{ font-size: 18px; font-weight: 900; text-align: center; height: 8%; border-bottom: 1px solid #cfcfcf; color: #616161; }
+#subscriptionListCont{ flex-grow: 1;max-height: 87%;  overflow-y: auto; margin: 5px 0; padding: 0 10px;}
+#subscriptionListCont .subscriptionItemCont{  padding: 15px 0 ; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ececec;}
+#subscriptionListCont .subscriptionItemCont .subscriptionItem_left{ display: flex; gap: 10px;}
 .shadow{ margin-right: 15px;}
+
+@media screen and (max-width: 768px){
+    .contW935{
+        flex-direction: column;
+        align-items: center;
+    }
+    .contW935 #subscriptionCont_left{
+        padding: 0 0 10px 0;
+        flex-direction: column-reverse;
+    }
+    #subscriptionCont_right{
+        width: 90%;
+    }
+
+}
