--- a/src/main/resources/templates/commonHeader.html
+++ b/src/main/resources/templates/commonHeader.html
@@ -12,7 +12,10 @@
             </a>
         </div>
 
-        <div class="header__center"></div>
+        <div class="header__center">
+<!--            <input type="text">-->
+<!--            <div>MAP</div>-->
+        </div>
 
         <div class="header__right">
             <ul class="menus" sec:authorize="isAnonymous()">
