--- a/src/main/resources/templates/root/userFeed.html
+++ b/src/main/resources/templates/root/userFeed.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" th:href="@{/css/root/userFeed.css}">
 </th:block>
 <th:block layout:fragment="js">
+    <script defer th:src="@{/js/common.js}"></script>
+    <script defer th:src="@{/js/user/subscriptionsBtn.js}"></script>
     <script defer th:src="@{/js/root/userFeed.js}"></script>
 </th:block>
 <th:block layout:fragment="content">
