--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -6,7 +6,7 @@ a{text-decoration: none; color: black; }
 ul,ol,li{list-style: none}
 
 header{ height: 50px; background-color:#fafafa; position: fixed; padding-left: 20px; padding-right: 20px; width: 100%; box-shadow: 0 4px 4px -4px #dfe6e9;}
-nav{ display: flex; height: 100%; width: 100%;}
+nav{ display: flex; height: 100%; width: 100%; align-items: center;}
 .header__left {
     padding-left: 15px;
     display: flex;
@@ -17,6 +17,19 @@ nav{ display: flex; height: 100%; width: 100%;}
     background: linear-gradient(to right, #ff4692, #84e7f6);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+.header__center{
+    display: flex;
+    justify-content: space-between;
+    flex: 12 0;
+    padding-left: 50px;
+}
+.header__center input{
+    background-color: #c7c7c7;
+    border-radius: 8px;
+
+    border: none;
+    padding: 5px 0;
 }
 
 .header__right {
