--- a/src/main/resources/static/css/user/subscriptions.css
+++ b/src/main/resources/static/css/user/subscriptions.css
@@ -7,6 +7,8 @@
 #subscriptionListCont{ flex-grow: 1;max-height: 87%;  overflow-y: auto; margin: 5px 0; padding: 0 10px;}
 #subscriptionListCont .subscriptionItemCont{  padding: 15px 0 ; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #ececec;}
 #subscriptionListCont .subscriptionItemCont .subscriptionItem_left{ display: flex; gap: 10px;}
+
+.cancel_subscription-modal .btnCancel { border-radius: 5px; margin: 8px auto; padding: 12px 15px; border: none; background-color: #cfcfcf; width: 100%;}
 .shadow{ margin-right: 15px;}
 
 @media screen and (max-width: 768px){
