--- a/src/main/resources/templates/user/subscriptions.html
+++ b/src/main/resources/templates/user/subscriptions.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/user/subscriptions.css}">
 </th:block>
 <th:block layout:fragment="js">
+    <script defer th:src="@{/js/common.js}"></script>
+    <script defer th:src="@{/js/user/subscriptionsBtn.js}"></script>
     <script defer th:src="@{/js/user/subscriptions.js}"></script>
 </th:block>
 <th:block layout:fragment="content">
@@ -22,10 +24,10 @@
         </div>
     </div>
     <!--구독취소모달-->
-    <div id="cancel_subscription-modal" class="modal hide">
+    <div class="cancel_subscription-modal modal hide">
         <div>
             <div class="modal_close_parent"><div>구독을 취소하시겠습니까?</div><i class="modal_close fas fa-times"></i></div>
-            <input type="button" id="btnCancel" class="btn pointer" value="네">
+            <input type="button" class="btnCancel btn pointer" value="네">
         </div>
     </div>
 </th:block>
