--- a/src/main/resources/templates/user/subscriptions.html
+++ b/src/main/resources/templates/user/subscriptions.html
@@ -20,7 +20,9 @@
         </div>
         <div id="subscriptionCont_right" class="shadow">
             <div id="subscriptionCont_right_header">구독</div>
-            <div id="subscriptionListCont"></div>
+            <div id="subscriptionListCont">
+<!--                <div class="subscription_loading"><img th:src="@{/img/loading.gif}"></div>-->
+            </div>
         </div>
     </div>
     <!--구독취소모달-->
